--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,14 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+    scroll-behavior: smooth;
+}
+
 .flex-center {
-  @apply flex justify-center items-center;
+    @apply flex justify-center items-center;
 }
 
 .no-scroll {
-  overflow: hidden;
+    overflow: hidden;
 }
